--- a/exercice/exopy.html
+++ b/exercice/exopy.html
@@ -34,7 +34,7 @@
             success_msg("Bravo! tu as réussi")
         </code>
         <div data-type="hint">
-            <p>Use the <code>print()</code> function to print Hello World.</p>
+            <p>Utilise<code>print()</code> pour print Hello World.</p>
         </div>
     </div>
   </div>
