--- a/exercice/exopy.html
+++ b/exercice/exopy.html
@@ -24,7 +24,7 @@
     <div data-datacamp-exercise data-lang="python" data-height="500">
         <code data-type="pre-exercise-code"># no pec</code>
         <code data-type="sample-code">
-            # Your code here
+            # ton code
         </code>
         <code data-type="solution">
             print("Hello World!")
@@ -41,12 +41,12 @@
 
   <div class="exercise">
     <div class="title">
-      <h2>Exercise 2: Calculate Square Root</h2>
+      <h2>Exercise 2: Calcul racine carrée</h2>
     </div>
     <div data-datacamp-exercise data-lang="python" data-height="500">
         <code data-type="pre-exercise-code"># no pec</code>
         <code data-type="sample-code">
-            # Your code here
+            #code 
         </code>
         <code data-type="solution">
             import math
@@ -58,22 +58,22 @@
             test_function("math.sqrt")
             test_object("number")
             test_function("print")
-            success_msg("Well done! You've calculated the square root.")
+            success_msg("bravo!.")
         </code>
         <div data-type="hint">
-            <p>Use the <code>math.sqrt()</code> function to calculate the square root of a number.</p>
+            <p>Use the <code>math.sqrt()</code></p>
         </div>
     </div>
   </div>
 
   <div class="exercise">
     <div class="title">
-      <h2>Exercise 3: Sum of Even Numbers</h2>
+      <h2>Exercise 3: Somme de nombres</h2>
     </div>
     <div data-datacamp-exercise data-lang="python" data-height="500">
         <code data-type="pre-exercise-code"># no pec</code>
         <code data-type="sample-code">
-            # Your code here
+            # ton code
         </code>
         <code data-type="solution">
             numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -84,10 +84,10 @@
             test_object("numbers")
             test_function("sum")
             test_function("print")
-            success_msg("Awesome! You've calculated the sum of even numbers.")
+            success_msg("bravo!")
         </code>
         <div data-type="hint">
-            <p>Use a list comprehension to filter even numbers and then use the <code>sum()</code> function to calculate their sum.</p>
+            <p>list comprehension<code>sum()</code></p>
         </div>
     </div>
   </div>
